# aurora

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: cmake-multi-platform.yml
constants/: analysis_constants.h  analysis_constants.hpp  constants.h  constants.hpp  zobrist_keys.hpp
debug/: chess.cpp  magic.c  masks.cpp  rook_table.txt
helpers/: attacks.hpp  hash.h  hash.hpp  help.h  help.hpp
lib/: board.h  board.hpp  move.h  move.hpp
src/: analysis.h  analysis.hpp  bot.h  bot.hpp  chess.h  chess.hpp  engine.h  engine.hpp  engineUCI.h  engineUCI.hpp  main.cpp
